; ModuleID = '/home/carl/AnghaBench/esp-idf/components/protocomm/src/transports/extr_protocomm_httpd.c_protocomm_httpd_add_endpoint.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/protocomm/src/transports/extr_protocomm_httpd.c_protocomm_httpd_add_endpoint.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i64 }
%struct.TYPE_4__ = type { i8*, i32*, i32, i32 }

@pc_httpd = common dso_local global %struct.TYPE_5__* null, align 8
@ESP_ERR_INVALID_STATE = common dso_local global i32 0, align 4
@TAG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [21 x i8] c"Adding endpoint : %s\00", align 1
@.str.1 = private unnamed_addr constant [25 x i8] c"Malloc failed for ep uri\00", align 1
@ESP_ERR_NO_MEM = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [4 x i8] c"/%s\00", align 1
@common_post_handler = common dso_local global i32 0, align 4
@HTTP_POST = common dso_local global i32 0, align 4
@ESP_OK = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [32 x i8] c"Uri handler register failed: %s\00", align 1
@ESP_FAIL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32, i8*)* @protocomm_httpd_add_endpoint to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @protocomm_httpd_add_endpoint(i8* %0, i32 %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca %struct.TYPE_4__, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  %12 = load %struct.TYPE_5__*, %struct.TYPE_5__** @pc_httpd, align 8
  %13 = icmp eq %struct.TYPE_5__* %12, null
  br i1 %13, label %14, label %16

14:                                               ; preds = %3
  %15 = load i32, i32* @ESP_ERR_INVALID_STATE, align 4
  store i32 %15, i32* %4, align 4
  br label %62

16:                                               ; preds = %3
  %17 = load i32, i32* @TAG, align 4
  %18 = load i8*, i8** %5, align 8
  %19 = call i32 @ESP_LOGD(i32 %17, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0), i8* %18)
  %20 = load i8*, i8** %5, align 8
  %21 = call i64 @strlen(i8* %20)
  %22 = add nsw i64 %21, 2
  %23 = call i8* @calloc(i32 1, i64 %22)
  store i8* %23, i8** %8, align 8
  %24 = load i8*, i8** %8, align 8
  %25 = icmp ne i8* %24, null
  br i1 %25, label %30, label %26

26:                                               ; preds = %16
  %27 = load i32, i32* @TAG, align 4
  %28 = call i32 (i32, i8*, ...) @ESP_LOGE(i32 %27, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.1, i64 0, i64 0))
  %29 = load i32, i32* @ESP_ERR_NO_MEM, align 4
  store i32 %29, i32* %4, align 4
  br label %62

30:                                               ; preds = %16
  %31 = load i8*, i8** %8, align 8
  %32 = load i8*, i8** %5, align 8
  %33 = call i32 @sprintf(i8* %31, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.2, i64 0, i64 0), i8* %32)
  %34 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  %35 = load i8*, i8** %8, align 8
  store i8* %35, i8** %34, align 8
  %36 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 1
  store i32* null, i32** %36, align 8
  %37 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 2
  %38 = load i32, i32* @common_post_handler, align 4
  store i32 %38, i32* %37, align 8
  %39 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 3
  %40 = load i32, i32* @HTTP_POST, align 4
  store i32 %40, i32* %39, align 4
  %41 = load %struct.TYPE_5__*, %struct.TYPE_5__** @pc_httpd, align 8
  %42 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %41, i32 0, i32 0
  %43 = load i64, i64* %42, align 8
  %44 = inttoptr i64 %43 to i32*
  store i32* %44, i32** %11, align 8
  %45 = load i32*, i32** %11, align 8
  %46 = load i32, i32* %45, align 4
  %47 = call i32 @httpd_register_uri_handler(i32 %46, %struct.TYPE_4__* %9)
  store i32 %47, i32* %10, align 4
  %48 = load i32, i32* @ESP_OK, align 4
  %49 = icmp ne i32 %47, %48
  br i1 %49, label %50, label %58

50:                                               ; preds = %30
  %51 = load i32, i32* @TAG, align 4
  %52 = load i32, i32* %10, align 4
  %53 = call i32 @esp_err_to_name(i32 %52)
  %54 = call i32 (i32, i8*, ...) @ESP_LOGE(i32 %51, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.3, i64 0, i64 0), i32 %53)
  %55 = load i8*, i8** %8, align 8
  %56 = call i32 @free(i8* %55)
  %57 = load i32, i32* @ESP_FAIL, align 4
  store i32 %57, i32* %4, align 4
  br label %62

58:                                               ; preds = %30
  %59 = load i8*, i8** %8, align 8
  %60 = call i32 @free(i8* %59)
  %61 = load i32, i32* @ESP_OK, align 4
  store i32 %61, i32* %4, align 4
  br label %62

62:                                               ; preds = %58, %50, %26, %14
  %63 = load i32, i32* %4, align 4
  ret i32 %63
}

declare dso_local i32 @ESP_LOGD(i32, i8*, i8*) #1

declare dso_local i8* @calloc(i32, i64) #1

declare dso_local i64 @strlen(i8*) #1

declare dso_local i32 @ESP_LOGE(i32, i8*, ...) #1

declare dso_local i32 @sprintf(i8*, i8*, i8*) #1

declare dso_local i32 @httpd_register_uri_handler(i32, %struct.TYPE_4__*) #1

declare dso_local i32 @esp_err_to_name(i32) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
